<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="image">Image</string>
    <string name="str_start">START</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE</string>
    <string name="exercise_name">Exercise name</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout">This will stop your workout. You\'ve come this far, are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bpm">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="height_in_inches">HEIGHT (in inches)</string>
    <string name="height_in_feet">HEIGHT (in feet)</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="history_list">HISTORY LIST</string>
    <string name="chart">CHART</string>
</resources>