<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout"
        android:textColor="#212121"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/llBackDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonYes"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/buttonNo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>