<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHistoryActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <RadioGroup
        android:id="@+id/rgHistoryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbHistoryList"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/history_list"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/chart"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llHistoryListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/exercise_completed"
                android:textSize="18sp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvNoDataAvailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:textColor="#212121"
                android:textSize="18sp"
                android:visibility="visible"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvChart"
            android:text="CHART"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </RelativeLayout>

</LinearLayout>